--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "mongoose": "^5.9.26"
+  },
+  "devDependencies": {
+    "handlebars": "^4.5.0"
   }
 }
